<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Virtual Shop</string>
    <string name="no">No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat your password</string>
    <string name="password_forgot">Forgot password?</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="signup">Sign Up</string>
    <string name="new_user">New user?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="homePageTitle">Home Page</string>
    <string name="success">Success</string>
    <string-array name="job_type">
        <item>Manager</item>
        <item>Worker</item>
    </string-array>
    <string name="mgr_email">Manager email</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="select_image">Select image</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
    <string name="all">All</string>
    <string name="actions">Actions</string>
    <string name="add_item_barcode">Add Item by BC</string>

    <!-- Email pass recovery -->
    <string name="reset_pass_label">Enter your email to reset your password</string>
    <string name="reset">Reset password</string>
    <string name="success_msg">A recovery mail was sent to your address</string>

    <!-- Inventory -->
    <string name="inventory">Inventory</string>
    <string name="code">Code</string>
    <string name="cost">Cost</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="units">Units</string>
    <string name="units_limit">Units limit</string>
    <string name="item_delete_msg">Do you want to delete this item?</string>
    <string name="barcode_null">No barcode was scanned</string>
    <string name="barcode_scanner_prompt">Put your barcode inside the rectangle</string>
    <string name="item_replace_alert">Item already exists and will be replaced</string>
    <string name="inventory_option_add">Add item</string>
    <string name="inventory_option_delete">Delete item</string>
    <string name="inventory_option_edit">Edit item</string>
    <string name="inventory_option_search">Search BC</string>
    <string name="manage_categories">Manage categories</string>
    <string name="category_delete_dialog">Are you sure that you want to delete this category? </string>
    <string name="generic">Generic</string>
    <string name="all_categories">All</string>

    <!-- Sales -->
    <string name="sales">Sales</string>
    <string name="sales_option_new">New sale</string>
    <string name="current_units">Current units</string>
    <string name="sale_delete_msg">Do you want to delete this sale?</string>
    <string name="sale_complete_msg">Are you sure you want to complete this sale?</string>
    <string name="delete_sale">Delete sale</string>

    <!-- Orders -->
    <string name="orders">Orders</string>
    <string name="orders_option_new">New order</string>
    <string name="order_delete_msg">Do you want to delete this order?</string>
    <string name="order_complete_msg">Are you sure you want to complete this order?</string>
    <string name="delete_order">Delete order</string>

    <!-- Employees -->
    <string name="employees">Employees</string>
    <string name="calendar">Calendar</string>
    <string name="assignments">Assignments</string>
    <string name="entry">Entry</string>
    <string name="exit">Exit</string>
    <string name="details">Details</string>
    <string-array name="assignment_opts">
        <item>Show details</item>
        <item>Delete</item>
    </string-array>
    <string name="delete_assignment_msg">Are you sure you want to remove this assignment?</string>

    <!-- Statistics -->
    <string name="statistics">Statistics</string>
    <string name="registration_date">Registration date</string>
    <string name="number_employees">Number of employees</string>
    <string name="max_sale">Max sale</string>
    <string name="min_sale">Min sale</string>
    <string name="max_sales_day">Day with biggest number of sales</string>
    <string name="min_sales_day">Day with lowest number of sales</string>
    <string name="max_cost">Most expensive item</string>
    <string name="min_cost">Cheapest item</string>
    <string name="max_price">Biggest retail price</string>
    <string name="min_price">Lowest retail price</string>
    <string name="biggest_category">Biggest category</string>

    <!-- Notifications -->
    <string name="notifications">Notifications</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="units_limit_advice">Units are under %1$d for the item %2$s</string>
    <string name="new_assignment_notification">New assignment</string>
    <string name="new_assignment_notification_msg">New assignment on date %1$s</string>

    <!-- Errors -->
    <string name="error">Error</string>
    <string name="error_msg">Something bad occurred</string>
    <string name="password_match">Passwords do not match</string>
    <string name="email_validation">Email must be valid</string>
    <string name="password_blank">Password cannot be blank</string>
    <string name="name_blank">Name cannot be blank</string>
    <string name="surname_blank">Surname cannot be blank</string>
    <string name="mgr_validation">Manager mail is not valid</string>
    <string name="mgr_not_found">Manager mail not found</string>
    <string name="not_mgr">Manager mail does not belong to a manager</string>
    <string name="item_input_validation">Units, cost and price must be numbers</string>
    <string name="item_not_found">Item not found</string>
    <string name="units_format_error">Units cannot be less than 0</string>
    <string name="cost_format_error">Cost cannot be less than 0</string>
    <string name="price_format_error">Price cannot be less than 0</string>
    <string name="code_blank">Code cannot be blank</string>
    <string name="category_not_empty">There are items on this category. You cannot delete it.</string>
    <string name="sale_units_zero">Units cannot be zero</string>
    <string name="sale_units_null">Units must be a number</string>
    <string name="not_enough_units">There are not enough units</string>
    <string name="sale_has_items">Sale has items</string>
    <string name="empty_sale">Sale cannot be empty</string>
    <string name="empty_order">Order cannot be empty</string>

</resources>