<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.inventory.AddItemActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp">
        <EditText
            android:id="@+id/addItemCode"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:hint="@string/code"
            android:minHeight="48dp"
            android:layout_marginBottom="10dp"/>
        <ImageView
            android:minWidth="40sp"
            android:clickable="true"
            android:src="@drawable/ic_camera"
            android:id="@+id/addItemCodeScan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:focusable="true" />
    </LinearLayout>


    <EditText
            android:id="@+id/addItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:minHeight="48dp"
            android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/addItemCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cost"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/addItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/addItemUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/units"
        android:inputType="number"
        android:minHeight="48dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/addItemUnitsLimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/units_limit"
        android:inputType="number"
        android:minHeight="48dp"
        android:layout_marginBottom="10dp"/>

    <Spinner
        android:id="@+id/addItemCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:id="@+id/addItemSelectImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/image_border"
        android:src="@drawable/ic_camera"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>
</ScrollView>