<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.LoginActivity"
    android:layout_gravity="center">

    <GridLayout
        android:id="@+id/homeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_gravity="center"
        >


        <LinearLayout
            android:id="@+id/inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="35sp"
            android:layout_marginBottom="15sp">

            <ImageView
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:id="@+id/homeInventory"
                android:clickable="true"
                android:src="@drawable/ic_inventory" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/inventory"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeSales"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:clickable="true"
                android:src="@drawable/ic_sales" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sales"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeOrders"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:clickable="true"
                android:src="@drawable/order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/orders"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/employees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeEmployees"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:clickable="true"
                android:src="@drawable/employees" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/employees"
                android:textSize="24sp"
                android:layout_marginBottom="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeStats"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:clickable="true"
                android:src="@drawable/statistics" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/statistics"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeNotifications"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:clickable="true"
                android:src="@drawable/notifications" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/notifications"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeCalendar"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:clickable="true"
                android:src="@drawable/calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/calendar"
                android:textSize="24sp"/>
        </LinearLayout>

    </GridLayout>

</ScrollView>